--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,19 +6,10 @@
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-43048816-2', 'auto');
-        ga('send', 'pageview');
+        _gaq.push(['_setAccount', 'UA-43048816-2']);
+        _gaq.push(['_trackPageview']);
     </script>
     <!-- End Google Analytics -->
-    <!-- Google Tag Manager -->
-    <!--<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MK4TK6"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MK4TK6');</script>-->
-    <!-- End Google Tag Manager -->
 {% endif %}
 
 
