--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,13 +1,14 @@
 {% if site.google_analytics %}
     <!-- Google Analytics -->
     <script>
+        window.ga_debug = {trace: true};
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        _gaq.push(['_setAccount', 'UA-43048816-2']);
-        _gaq.push(['_trackPageview']);
+        ga('create', 'UA-43048816-2', 'auto');
+        ga('send', 'pageview'); 
     </script>
     <!-- End Google Analytics -->
 {% endif %}
